RESOLVED FIXED282764
https://state-of-html-2024.onrender.com/en-US/opinions/ - does not show `x` center of circle
https://bugs.webkit.org/show_bug.cgi?id=282764
Summary https://state-of-html-2024.onrender.com/en-US/opinions/ - does not show `x` c...
Ahmad Saleem
Reported 2024-11-07 09:22:47 PST
Hi Team, Go to preliminary results of `state of HTML` survey: URL - https://state-of-html-2024.onrender.com/en-US/ *** Steps to Reproduce *** (1) Go to `Opinions` from left pane (2) Click on `Add Filters` (3) Click on `Add Series` *** Expected Results *** Notice `X` (close) button of `Add Series` *** Actual Result *** It should be center as button ___ Just raising so we can fix it. Thanks!
Attachments
Testcase (299 bytes, text/html)
2024-11-07 14:13 PST, Sammy Gill
no flags
Testcase (337 bytes, text/html)
2024-11-07 15:06 PST, Sammy Gill
no flags
Radar WebKit Bug Importer
Comment 1 2024-11-07 09:22:56 PST
Sammy Gill
Comment 2 2024-11-07 14:13:50 PST
Created attachment 473172 [details] Testcase Attaching reduced test case
alan
Comment 3 2024-11-07 14:54:23 PST
Not sure if this test reduction is correct. I assume PASS is when green box is centered and while it is indeed off-centered in some old builds, recent spades (e.g. 286297@main) shows it centered while https://state-of-html-2024.onrender.com/en-US/ still fails.
alan
Comment 4 2024-11-07 14:58:09 PST
(In reply to zalan from comment #3) > Not sure if this test reduction is correct. I assume PASS is when green box > is centered and while it is indeed off-centered in some old builds, recent > spades (e.g. 286297@main) shows it centered while > https://state-of-html-2024.onrender.com/en-US/ still fails. unless I have a wrong assumption on PASS here (annotation would certainly help)
Sammy Gill
Comment 5 2024-11-07 15:06:46 PST
Created attachment 473173 [details] Testcase I believe this is still broken on ToT testing with a spade. I reworked the test case a bit to state what the PASS criteria is (vertically and horizontally centered) and the grid should be larger in this version.
alan
Comment 6 2024-11-07 15:21:27 PST
(In reply to Sammy Gill from comment #5) > Created attachment 473173 [details] > Testcase > > I believe this is still broken on ToT testing with a spade. I reworked the > test case a bit to state what the PASS criteria is (vertically and > horizontally centered) and the grid should be larger in this version. it is also a slightly different test case :)
alan
Comment 7 2024-11-07 15:23:36 PST
with pinch zooming and constant reloading the first test case fails too. The second test case is much better.
Sammy Gill
Comment 8 2024-11-08 12:11:16 PST
Sammy Gill
Comment 9 2024-11-08 13:23:28 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/49078
EWS
Comment 10 2024-11-08 16:34:22 PST
Committed 286367@main (30864f828c21): <https://commits.webkit.org/286367@main> Reviewed commits have been landed. Closing PR #36414 and removing active labels.
EWS
Comment 11 2024-11-14 13:13:29 PST
Committed 283286.480@safari-7620-branch (ededfc5bd7a0): <https://commits.webkit.org/283286.480@safari-7620-branch> Reviewed commits have been landed. Closing PR #2271 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.